--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
     	<title>VigoBNB</title>
 
+        <link rel="icon" type="image/svg+xml" href="/assets/icon.svg">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="assets/vigobnb.css" />
 
@@ -11,13 +13,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-        <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/ui-shell.min.js"></script>
-        <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/data-table.min.js"></script>
-        <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/date-picker.min.js"></script>
-        <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/toggle.min.js"></script>
-        <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/number-input.min.js"></script>
-        <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/multi-select.min.js"></script>
-        <script type="module" src="assets/vigobnb.js"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/ui-shell.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/data-table.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/date-picker.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/toggle.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/number-input.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/multi-select.min.js" type="module"></script>
+        <script src="https://cdn.jsdelivr.net/npm/throttle-debounce@3.0.1/umd/index.min.js"></script>
+        <script src="assets/vigobnb.js" type="module"></script>
     </head>
     <body></body>
 </html>
