Aporta los avances de hoy hasta ahora

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <html lang="es">
     <head>
         <meta charset="utf-8">
-    	<title>VigoBNB</title>
+        <meta name="robots" content="noindex">
+
+    	<title>Vigobnb</title>
 
         <link rel="icon" type="image/svg+xml" href="/assets/icon.svg">
 
