--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="robots" content="noindex">
-
     	<title>Vigobnb</title>
-
         <link rel="icon" type="image/svg+xml" href="/assets/icon.svg">
-
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="assets/vigobnb.css" />
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
         <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/ui-shell.min.js" type="module"></script>
         <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/data-table.min.js" type="module"></script>
         <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/date-picker.min.js" type="module"></script>
@@ -24,5 +19,58 @@
         <script src="https://cdn.jsdelivr.net/npm/throttle-debounce@3.0.1/umd/index.min.js"></script>
         <script src="assets/vigobnb.js" type="module"></script>
     </head>
-    <body></body>
+    <body><!--
+
+
+                  JJJJJJJJJJJ                  iiii
+                  J:::::::::J                 i::::i
+                  J:::::::::J                  iiii
+                  JJ:::::::JJ
+                    J:::::J  aaaaaaaaaaaaa   iiiiiii    mmmmmmm    mmmmmmm       eeeeeeeeeeee
+                    J:::::J  a::::::::::::a  i:::::i  mm:::::::m  m:::::::mm   ee::::::::::::ee
+                    J:::::J  aaaaaaaaa:::::a  i::::i m::::::::::mm::::::::::m e::::::eeeee:::::ee
+                    J:::::j           a::::a  i::::i m::::::::::::::::::::::me::::::e     e:::::e
+                    J:::::J    aaaaaaa:::::a  i::::i m:::::mmm::::::mmm:::::me:::::::eeeee::::::e
+        JJJJJJJ     J:::::J  aa::::::::::::a  i::::i m::::m   m::::m   m::::me:::::::::::::::::e
+        J:::::J     J:::::J a::::aaaa::::::a  i::::i m::::m   m::::m   m::::me::::::eeeeeeeeeee
+        J::::::J   J::::::Ja::::a    a:::::a  i::::i m::::m   m::::m   m::::me:::::::e
+        J:::::::JJJ:::::::Ja::::a    a:::::a i::::::im::::m   m::::m   m::::me::::::::e
+         JJ:::::::::::::JJ a:::::aaaa::::::a i::::::im::::m   m::::m   m::::m e::::::::eeeeeeee
+           JJ:::::::::JJ    a::::::::::aa:::ai::::::im::::m   m::::m   m::::m  ee:::::::::::::e
+             JJJJJJJJJ       aaaaaaaaaa  aaaaiiiiiiiimmmmmm   mmmmmm   mmmmmm    eeeeeeeeeeeeee
+
+
+                 wwwwwww           wwwww           wwwwwwwaaaaaaaaaaaaa      ssssssssss
+                  w:::::w         w:::::w         w:::::w a::::::::::::a   ss::::::::::s
+                   w:::::w       w:::::::w       w:::::w  aaaaaaaaa:::::ass:::::::::::::s
+                    w:::::w     w:::::::::w     w:::::w            a::::as::::::ssss:::::s
+                     w:::::w   w:::::w:::::w   w:::::w      aaaaaaa:::::a s:::::s  ssssss
+                      w:::::w w:::::w w:::::w w:::::w     aa::::::::::::a   s::::::s
+                       w:::::w:::::w   w:::::w:::::w     a::::aaaa::::::a      s::::::s
+                        w:::::::::w     w:::::::::w     a::::a    a:::::assssss   s:::::s
+                         w:::::::w       w:::::::w      a::::a    a:::::as:::::ssss::::::s
+                          w:::::w         w:::::w       a:::::aaaa::::::as::::::::::::::s
+                           w:::w           w:::w         a::::::::::aa:::as:::::::::::ss
+                            www             www           aaaaaaaaaa  aaaa sssssssssss
+
+
+              hhhhhhh
+              h:::::h
+              h:::::h
+              h:::::h
+               h::::h hhhhh           eeeeeeeeeeee    rrrrr   rrrrrrrrr       eeeeeeeeeeee
+               h::::hh:::::hhh      ee::::::::::::ee  r::::rrr:::::::::r    ee::::::::::::ee
+               h::::::::::::::hh   e::::::eeeee:::::eer:::::::::::::::::r  e::::::eeeee:::::ee
+               h:::::::hhh::::::h e::::::e     e:::::err::::::rrrrr::::::re::::::e     e:::::e
+               h::::::h   h::::::he:::::::eeeee::::::e r:::::r     r:::::re:::::::eeeee::::::e
+               h:::::h     h:::::he:::::::::::::::::e  r:::::r     rrrrrrre:::::::::::::::::e
+               h:::::h     h:::::he::::::eeeeeeeeeee   r:::::r            e::::::eeeeeeeeeee
+               h:::::h     h:::::he:::::::e            r:::::r            e:::::::e
+               h:::::h     h:::::he::::::::e           r:::::r            e::::::::e
+               h:::::h     h:::::h e::::::::eeeeeeee   r:::::r             e::::::::eeeeeeee
+               h:::::h     h:::::h  ee:::::::::::::e   r:::::r              ee:::::::::::::e
+               hhhhhhh     hhhhhhh    eeeeeeeeeeeeee   rrrrrrr                eeeeeeeeeeeeee
+
+
+    --></body>
 </html>
