Corrige un problema introducido por la última versión del sistema de diseño

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/ui-shell.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/data-table.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/date-picker.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/toggle.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/number-input.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/multi-select.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/ui-shell.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/data-table.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/date-picker.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/toggle.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/number-input.min.js" type="module"></script>
+        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/multi-select.min.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/throttle-debounce@3.0.1/umd/index.min.js"></script>
         <script src="assets/vigobnb.js" type="module"></script>
     </head>
