--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
-    <html lang="es">
+<html lang="es">
     <head>
-        <meta charset="utf-8">
-        <meta name="robots" content="noindex">
-    	<title>Vigobnb</title>
-        <link rel="icon" type="image/svg+xml" href="/assets/icon.svg">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <meta charset="utf-8" />
+        <meta name="robots" content="noindex" />
+        <title>Vigobnb</title>
+        <link rel="icon" type="image/svg+xml" href="/assets/icon.svg" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <link rel="stylesheet" href="assets/vigobnb.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/ui-shell.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/data-table.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/date-picker.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/toggle.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/number-input.min.js" type="module"></script>
-        <script src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/multi-select.min.js" type="module"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet"
+        />
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/ui-shell.min.js"
+            type="module"
+        ></script>
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/data-table.min.js"
+            type="module"
+        ></script>
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/date-picker.min.js"
+            type="module"
+        ></script>
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/toggle.min.js"
+            type="module"
+        ></script>
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/number-input.min.js"
+            type="module"
+        ></script>
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/multi-select.min.js"
+            type="module"
+        ></script>
+        <script
+            src="https://1.www.s81c.com/common/carbon/web-components/version/v1.18.0/content-switcher.min.js"
+            type="module"
+        ></script>
         <script src="https://cdn.jsdelivr.net/npm/throttle-debounce@3.0.1/umd/index.min.js"></script>
         <script src="assets/vigobnb.js" type="module"></script>
     </head>
-    <body><!--
+    <body>
+        <!--
 
 
                   JJJJJJJJJJJ                  iiii
